--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <junit.version>5.9.2</junit.version>
+    <maven.surefire.plugin.version>3.1.2</maven.surefire.plugin.version>
   </properties>
 
   <dependencies>
@@ -38,6 +39,11 @@
           <target>17</target>
           <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven.surefire.plugin.version}</version>
       </plugin>
     </plugins>
   </build>
