--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,22 +19,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+        
     - name: Build
       run: mvn --batch-mode -DskipTests package
+      
     - name: Test
       run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
 
-    - name: Report
-      uses: dorny/test-reporter@v1
-      if: always()
+    - name: Publish Report
+      uses: mikepenz/action-junit-report@v4
+      if: success() || failure() # always run even if the previous step fails
       with:
-        name: Maven Tests
-        path: target/surefire-reports/*.xml
-        reporter: java-junit
-        fail-on-error: true
+        report_paths: '**/target/surefire-reports/TEST-*.xml'
