--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,3 +34,5 @@ jobs:
       if: success() || failure()
       with:
         report_paths: '**/target/surefire-reports/TEST-*.xml'
+        include_passed: true
+        detailed_summary: true
