--- a/spring-boot-project/src/main/resources/application.yaml
+++ b/spring-boot-project/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:mydb
+    url: jdbc:h2:file:./db/spring-boot-project-db
     username: sa
     password: password
     driverClassName: org.h2.Driver
@@ -8,7 +8,10 @@ spring:
     console:
       enabled: true
   jpa:
-    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.H2Dialect
+    generate-ddl: true
+    hibernate:
+      ddl-auto: update
 
 server:
   error:
