--- a/car-industry/car-parts-factory/pom.xml
+++ b/car-industry/car-parts-factory/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>mladra.training</groupId>
-        <artifactId>recruitment-training</artifactId>
+        <artifactId>car-industry</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
