Added keycloak clients for every part of the system. Added usage of keycloak security to the car-info-service module. Made every subsystem start on different port. Added additional implementation of Weight Point task.

--- a/car-industry/car-info-service/src/main/resources/application.yaml
+++ b/car-industry/car-info-service/src/main/resources/application.yaml
@@ -1,3 +1,8 @@
+server:
+  port: 8080
+  error:
+    include-message: ALWAYS
+
 spring:
   datasource:
     url: jdbc:h2:file:./car-industry/db/car-info-service-db
@@ -13,6 +18,10 @@ spring:
     hibernate:
       ddl-auto: update
 
-server:
-  error:
-    include-message: ALWAYS
+  security:
+    oauth2:
+      car-info-service:
+        opaque:
+          introspection-uri: http://localhost:8079/auth/realms/car-industry/protocol/openid-connect/token/introspect
+          introspection-client-id: car-info-service-client
+          introspection-client-secret: car-info-service-secret
