--- a/car-industry/authorization-service/pom.xml
+++ b/car-industry/authorization-service/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>mladra.training</groupId>
-        <artifactId>recruitment-training</artifactId>
+        <artifactId>car-industry</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>authorization-service</artifactId>
